<resources>
    <string name="app_name">FragmentChat</string>
    <string name="message_hint">Message</string>
    <string name="search_hint">Search…</string>
    <string name="search_menu_item_title">Search</string>

    <string name="error_text">Something went wrong</string>
    <string name="retry_text">Retry</string>

    <string name="channels_menu_title">Channels</string>
    <string name="people_menu_title">People</string>
    <string name="profile_menu_title">Profile</string>

    <string name="subscribed_streams_tab_title">Subscribed</string>
    <string name="all_streams_tab_title">All Streams</string>
    <string name="people_toolbar_title">Users</string>
    <string name="online_status">online</string>
    <string name="logout_button_text">Log out</string>

    <string name="sharp_placeholder">#%1$s</string>
    <string name="topic_title">Topic: #%1$s</string>

    <string name="open_text">Open</string>
    <string name="create_stream_text">Create Stream</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="invite_only">Invite only</string>
    <string name="stream_created">Stream created!</string>
    <string name="topic_hint">#topic</string>

    <string name="copied_to_clipboard">Copied to clipboard</string>

    <string name="add_reaction">Add reaction</string>
    <string name="delete_message">Delete message</string>
    <string name="edit_message">Edit message</string>
    <string name="change_topic">Change topic</string>
    <string name="copy">Copy</string>
    <string name="offline">Offline</string>
    <string name="too_big_file">File is too big</string>
</resources>
